--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
           </div>
 
           <nav>
+			<a href="https://owenkrueger.dev">Homepage</a>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
